plugins/scripting/scripting-tests/testData/diagnostics/repl/property_constant_initializer.kts

// SNIPPET

const val x = 1
val y = x + 1

// SNIPPET

const val z = <!CONST_VAL_WITH_NON_CONST_INITIALIZER!>x + y + 1<!>
